@@ -1,3 +1,6 @@
+* Display the number of selected records
+* Humanize the count result
+* Add limit to search_count
 * Install evince dependency for Windows builds
 
 Version 6.0.2 - 2021-06-17
